<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewNewProperty"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/imgButtonSelect"/>

<TextView
    android:id="@+id/txtImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/select_a_picture_for_property"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/imgButtonSelect"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/imgButtonSelect" />

<ImageButton
    android:id="@+id/imgButtonSelect"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="25dp"
    android:background="@color/design_default_color_background"
    android:src="@drawable/select_image"
    app:layout_constraintBottom_toTopOf="@+id/edtRoomCount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recyclerViewNewProperty" />


<TextView
    android:id="@+id/txtRoomCount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/numberOfRooms"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/edtRoomCount"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/edtRoomCount" />

<EditText
    android:id="@+id/edtRoomCount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:hint="@string/choose_number_of_rooms"
    android:inputType="number"
    app:layout_constraintBottom_toTopOf="@+id/edtBathroomsCount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/txtRoomCount"
    app:layout_constraintTop_toBottomOf="@+id/imgButtonSelect" />

<TextView
    android:id="@+id/txtBathroomsCount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/numberOfBathrooms"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/edtBathroomsCount"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/edtBathroomsCount" />

<EditText
    android:id="@+id/edtBathroomsCount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:inputType="number"
    android:hint="@string/choose_number_of_bathrooms"
    app:layout_constraintBottom_toTopOf="@+id/edtBedroomsCount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/txtBathroomsCount"
    app:layout_constraintTop_toBottomOf="@+id/edtRoomCount" />


<TextView
    android:id="@+id/txtBedroomsCount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/NumberOfBedrooms"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/edtBedroomsCount"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/edtBedroomsCount" />

<EditText
    android:id="@+id/edtBedroomsCount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:hint="@string/choose_number_of_bedrooms"
    android:inputType="number"
    app:layout_constraintBottom_toTopOf="@+id/validateNewProperty"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/txtBedroomsCount"
    app:layout_constraintTop_toBottomOf="@+id/edtBathroomsCount" />

<TextView
    android:id="@+id/validateNewProperty"
    android:layout_width="80dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/validate"
    android:gravity="center"
    android:text="@string/save"
    android:textColor="#FFF"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edtBedroomsCount" />

</androidx.constraintlayout.widget.ConstraintLayout>
